--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link text-gold" href="#home">Home</a>
+                        <a class="nav-link text-purple" href="#home">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-gold" href="#about">About</a>
+                        <a class="nav-link text-purple" href="#about">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-gold" href="#projects">Projects</a>
+                        <a class="nav-link text-purple" href="#projects">Projects</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-gold" href="#contact">Contact</a>
+                        <a class="nav-link text-purple" href="#contact">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -42,7 +42,7 @@
     <footer class="footer bg-white py-3 shadow-sm">
         <div class="container text-center">
             <p class="text-purple mb-0">&copy; 2024 My Portfolio. All Rights Reserved.</p>
-            <a class="text-gold" href="https://github.com/yourusername">GitHub</a>
+            <a class="text-purple" href="https://github.com/yourusername">GitHub</a>
         </div>
     </footer>
 
